--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -98,11 +98,11 @@ objects:
     - bird
     - bicycle
     - deer
-  filters:
-    person:
-      min_area: 5000
-      max_area: 100000
-      threshold: 0.7
+  # filters:
+  #   person:
+  #     min_area: 5000
+  #     max_area: 100000
+  #     threshold: 0.7
 
 cameras:
   frontyard:
