--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -2,9 +2,9 @@
 
 logger:
   default: info
-  logs:
-    frigate.record: debug
-    #frigate.ptz.onvif: debug
+  # logs:
+  #   frigate.record: debug
+  #   #frigate.ptz.onvif: debug
 
 mqtt:
   host: mosquitto.default.svc.cluster.local
