--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -36,13 +36,13 @@ go2rtc:
   streams:
     frontyard_hq:
       - ffmpeg:rtsp://${SECRET_CAM_USERNAME}:${SECRET_CAM_PASSWORD}@192.168.1.101:554/0
-    frontyard_lq:
-      - ffmpeg:rtsp://${SECRET_CAM_USERNAME}:${SECRET_CAM_PASSWORD}@192.168.1.101:554/1
+    # frontyard_lq:
+    #   - ffmpeg:rtsp://${SECRET_CAM_USERNAME}:${SECRET_CAM_PASSWORD}@192.168.1.101:554/1
     backyard_hq:
       - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
-    backyard_lq:
-      - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_1.264
-      - "ffmpeg:backyard#video=h264"
+    # backyard_lq:
+    #   - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_1.264
+    #   - "ffmpeg:backyard#video=h264"
   webrtc:
     listen: ":8555"
     candidates:
@@ -92,29 +92,31 @@ cameras:
   frontyard:
     ffmpeg:
       inputs:
-        - path: rtsp://127.0.0.1:8554/frontyard_lq
-          input_args: preset-rtsp-restream
-          roles:
-            - detect
         - path: rtsp://127.0.0.1:8554/frontyard_hq
           input_args: preset-rtsp-restream
           roles:
+            - detect
             - record
+        # - path: rtsp://127.0.0.1:8554/frontyard_lq
+        #   input_args: preset-rtsp-restream
+        #   roles:
+        #     - detect
     detect:
       enabled: true # <---- disable detection until you have a working camera feed
-      width: 1280 # <---- update for your camera's resolution
-      height: 720 # <---- update for your camera's resolution
+      width: 1920 # <---- update for your camera's resolution
+      height: 1080 # <---- update for your camera's resolution
   backyard:
     ffmpeg:
       inputs:
-        - path: rtsp://127.0.0.1:8554/backyard_lq
-          input_args: preset-rtsp-restream
-          roles:
-            - detect
         - path: rtsp://127.0.0.1:8554/backyard_hq
           input_args: preset-rtsp-restream
           roles:
+            - detect
             - record
+        # - path: rtsp://127.0.0.1:8554/backyard_lq
+        #   input_args: preset-rtsp-restream
+        #   roles:
+        #     - detect
     onvif:
       host: 192.168.1.206
       port: 8888
@@ -122,8 +124,8 @@ cameras:
       password: ${SECRET_BACKYARDCAM_PASSWORD}
     detect:
       enabled: true # <---- disable detection until you have a working camera feed
-      width: 1280 # <---- update for your camera's resolution
-      height: 720 # <---- update for your camera's resolution
+      width: 1920 # <---- update for your camera's resolution
+      height: 1080 # <---- update for your camera's resolution
 
 
 # Optional: Telemetry configuration
