--- a/kubernetes/apps/default/troddit/app/helmrelease.yaml
+++ b/kubernetes/apps/default/troddit/app/helmrelease.yaml
@@ -31,6 +31,10 @@ spec:
             image:
               repository: docker.io/bsyed/troddit
               tag: latest
+            env:
+            envFrom:
+              - secretRef:
+                  name: troddit-secrets
     service:
       main:
         ports:
