--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -18,6 +18,6 @@ resources:
   - ./n8n/ks.yaml
   #- ./scrypted/ks.yaml
   #- ./superset/ks.yaml
-  #- ./troddit/ks.yaml
+  - ./troddit/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
