--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -21,7 +21,7 @@ stringData:
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:wZgTWqfOomrQ,iv:NO/9EHNbva2eWe7f1XnWuQRLBTF7aLPizDpSRW0Fels=,tag:dv8g32XFqjvm3uXch5Ep1g==,type:str]
     SECRET_CAM_USERNAME: ENC[AES256_GCM,data:8Te/218=,iv:EerDoi2AHyrejESRRUa+I0KxycrSfslPCT+ngm3TKWU=,tag:vK8AZBxvzNLkbEHO0fnonQ==,type:str]
     SECRET_CAM_PASSWORD: ENC[AES256_GCM,data:dlvYLagA,iv:kSelNfLrI4QYnL+lI9buFQfCtCYirDfUBQSai4ciCvk=,tag:cid/ujrY4Dt5jKadDEAHGQ==,type:str]
-    SECRET_WIFICAM_PASSWORD: ENC[AES256_GCM,data:YAyJ/1mj,iv:ZdvzOC54Bj2bxQeAujCQUD5JHxqB8Vc1EsyV15doYNE=,tag:DU4GCKLVP+YVaBxmlnuWZw==,type:str]
+    SECRET_WIFICAM_PASSWORD: ENC[AES256_GCM,data:48CvwzZNWYBK,iv:HgiC58/z97Cb/Ir/YaQBryj9BaKSmuYf8v14GvUl4S4=,tag:tF3zSbaMApknclMRMkUT0A==,type:str]
     SECRET_BACKYARDCAM_USERNAME: ENC[AES256_GCM,data:Yi6o5BM=,iv:MShsCN2S1YQ26YLVDpb5QipkSwLgVzJStPjHianCpAU=,tag:OZzwtFNNId9pziN0qK3SOw==,type:str]
     SECRET_BACKYARDCAM_PASSWORD: ENC[AES256_GCM,data:wnHvCg8=,iv:a1/0OoqNuWFvIoHLp1HRFzrDg7G0oyi1qXjbTO+CnCU=,tag:AeUvV9AotchOLS/anTQN8Q==,type:str]
     SECRET_FRIGATE_PLUS_KEY: ENC[AES256_GCM,data:vhCaghO9Unl7GiiOnK/cPXtJJzTHvFxJKjDkhjDJXa+Q0urahbxcVyY1o57Vfz3F8rLvuX0h3XwMd1X5sONiKTIngcmpeyXV2zgTZSQ=,iv:GGLDJZ5BcJjcEtBVcqwGX3+ZZbqjrL4ALVFLnBxxFNk=,tag:59dRm4Kj+7aO8h5Xop4odg==,type:str]
@@ -40,8 +40,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-02T22:59:52Z"
-    mac: ENC[AES256_GCM,data:bjgft0uMBDdoPKx9IF+Eh0Dsf+6zMC3qSkzsKNF0SWIuSV/ZOF+camgA9UrXKRtYClGbUXvRLn9uFcfORZ9Q8YxGaqeS/bLlM4D8zqHibD+tgB1kod80ROmC8ig5oY27TTsYR/2mXGku/vli3nn4bDnMOegFm0m2Lcm+Pa64+sU=,iv:PPXiZ5A7xcFr9miFYRpHH0lbv3qBxey5/cRMB8SxnkI=,tag:jlX5WUCba43xRCqxI/v/Dg==,type:str]
+    lastmodified: "2023-12-03T01:31:00Z"
+    mac: ENC[AES256_GCM,data:3Lc0yBXNgq/xdtWbIAZW0SLwq6qBGRzXgmG9BewCf+xG0qGl1ISR1+Lb6n1Bpl8sd/v8RPaWMXwD0Pm5Yt5mA5eTjxUQOliHsrI6ZJrWQeWsj5XFWQmwcd1N5FBO+DMwcSn41PXvpQ2TxV/g3yR4jTWJEIAbIldsndKo7FRqCy0=,iv:eheUaJFXQNg9a4CUu4kNn437W4/srmgchEcl5COyq90=,tag:9j5Cj0vJCQSB2nGD6FqXxQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
