--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,21 +1,10 @@
 ---
-#area/ansible:
-  # - "ansible/**/*"
-  # - "bootstrap/templates/ansible/**/*"
-  # - "bootstrap/tasks/ansible/**/*"
 area/ansible:
   - changed-files:
       - any-glob-to-any-file: ansible/**/*
 area/github:
-  - ".github/**/*"
+  - changed-files:
+      - any-glob-to-any-file: .github/**/*
 area/kubernetes:
-  - "kubernetes/**/*"
-  - "bootstrap/templates/kubernetes/**/*"
-  - "bootstrap/tasks/kubernetes/**/*"
-area/bootstrap:
-  - "bootstrap/**/*"
-  - "bootstrap/configure.yaml"
-area/addons:
-  - "bootstrap/templates/addons/**/*"
-  - "bootstrap/tasks/addons/**/*"
-  - "bootstrap/vars/addons.sample.yaml"
+  - changed-files:
+      - any-glob-to-any-file: kubernetes/**/*
