--- a/.github/workflows/meta-labeler.yaml
+++ b/.github/workflows/meta-labeler.yaml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
   pull_request_target:
     branches: ["main"]
+    types: ["opened", "synchronize"]
 
 jobs:
   labeler:
@@ -22,5 +23,4 @@ jobs:
         uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
         with:
           configuration-path: .github/labeler.yaml
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          #repo-token: "${{ steps.generate-token.outputs.token }}"
+          repo-token: "${{ steps.generate-token.outputs.token }}"
