--- a/kubernetes/apps/default/troddit/app/ingress.yaml
+++ b/kubernetes/apps/default/troddit/app/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
-    hajimari.io/icon: mdi:ip-network
+    hajimari.io/icon: mdi:reddit
 spec:
   ingressClassName: internal
   rules:
