--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,10 +8,10 @@ resources:
   - ./authelia/ks.yaml
   - ./baserow/ks.yaml
   # - ./budibase/ks.yaml
-  - ./frigate/ks.yaml
+  #- ./frigate/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
-  - ./jupyterhub/ks.yaml
+  #- ./jupyterhub/ks.yaml
   - ./kubernetes-schemas/ks.yaml
   - ./lldap/ks.yaml
   - ./mosquitto/ks.yaml
