--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./authelia/ks.yaml
   - ./baserow/ks.yaml
   # - ./budibase/ks.yaml
-  - ./frigate/ks.yaml
+  #- ./frigate/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   #- ./jupyterhub/ks.yaml
@@ -18,5 +18,5 @@ resources:
   - ./n8n/ks.yaml
   #- ./superset/ks.yaml
   - ./troddit/ks.yaml
-  - ./website/ks.yaml
+  #- ./website/ks.yaml
   - ./whoami/ks.yaml
