--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,14 +4,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
- # - ./appsmith/ks.yaml
+  - ./appsmith/ks.yaml
   - ./authelia/ks.yaml
   - ./baserow/ks.yaml
   # - ./budibase/ks.yaml
   - ./frigate/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
-  #- ./jupyterhub/ks.yaml
+  - ./jupyterhub/ks.yaml
   - ./kubernetes-schemas/ks.yaml
   - ./lldap/ks.yaml
   - ./mosquitto/ks.yaml
