--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   #- ./qbittorrent/ks.yaml
   - ./plex/ks.yaml
   #- ./radarr/ks.yaml
- # - ./sabnzbd/ks.yaml
+  - ./sabnzbd/ks.yaml
   #- ./sonarr/ks.yaml
   - ./tautulli/ks.yaml
   - ./youtubedl/ks.yaml
