--- a/kubernetes/apps/default/frigate/app/config/config.yml
+++ b/kubernetes/apps/default/frigate/app/config/config.yml
@@ -41,8 +41,8 @@ go2rtc:
     basement_hq:
       - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_0.264
       #- "ffmpeg:backyard#video=h264"
-    basement_lq:
-      - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_1.264
+    # basement_lq:
+    #   - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_BACKYARDCAM_PASSWORD}@192.168.1.206:554/ch0_1.264
     #   - "ffmpeg:backyard#video=h264"
     backyard_hq:
       - ffmpeg:rtsp://${SECRET_BACKYARDCAM_USERNAME}:${SECRET_WIFICAM_PASSWORD}@192.168.1.201:10554/tcp/av0_0
@@ -73,7 +73,7 @@ record:
   enabled: true
   retain:
     days: 0
-    mode: all
+    mode: active_objects
   events:
     retain:
       default: 30
