--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./appsmith/ks.yaml
+  #- ./appsmith/ks.yaml
   - ./authelia/ks.yaml
-  - ./baserow/ks.yaml
+  #- ./baserow/ks.yaml
   # - ./budibase/ks.yaml
   #- ./frigate/ks.yaml
   - ./hajimari/ks.yaml
