--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -1,11 +1,12 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1beta1.json
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./cloudnative-pg/ks.yaml
   - ./couchdb/ks.yaml
-  - ./mongodb/ks.yaml
+  #- ./mongodb/ks.yaml
   - ./pgadmin/ks.yaml
   - ./redis/ks.yaml
   - ./redisinsight/ks.yaml
