--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -5,12 +5,12 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./bazarr/ks.yaml
- # - ./hydra/ks.yaml
- # - ./prowlarr/ks.yaml
+  - ./hydra/ks.yaml
+  - ./prowlarr/ks.yaml
   #- ./qbittorrent/ks.yaml
   - ./plex/ks.yaml
   - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
   - ./tautulli/ks.yaml
- # - ./youtubedl/ks.yaml
+  - ./youtubedl/ks.yaml
